# linkedin_mcp

./: .env.example  .gitignore  README.md  config.json  pyproject.toml  requirements.txt  server.py  test_resume_generation_client.py
examples/: basic_usage.py
linkedin_mcp/api/: __init__.py  auth.py  cover_letter_generator.py  job_application.py  job_search.py  profile.py  resume_generator.py
linkedin_mcp/api/clients/: __init__.py  linkedin.py
linkedin_mcp/api/models/: __init__.py  common.py  enums.py  requests.py  responses.py
linkedin_mcp/core/: exceptions.py  mcp_handler.py  protocol.py
linkedin_mcp/templates/cover_letter/: professional.j2
linkedin_mcp/templates/resume/: modern.j2
linkedin_mcp/utils/: api_utils.py  auth.py  config.py  rate_limiter.py  retry.py  template_manager.py
src/linkedin_mcp/: __init__.py  config.py  exceptions.py  server.py  utils.py
src/linkedin_mcp/ai/: __init__.py  base.py  (+1 more)
templates/cover_letter/: standard.html
templates/resume/: standard.html
tests/: conftest.py  test_auth_utils.py  test_config.py  test_integration.py  test_linkedin_client.py  test_mcp_protocol.py  test_resume_generation.py
tests/fixtures/: sample_job.json  sample_profile.json
tests/test_ai/: test_claude_provider.py
tests/test_data/: test_job.json  test_profile.json
tests/test_services/: test_application_tracker.py  test_cache.py  test_cover_letter_generator.py  test_format_converter.py  test_job_search.py  test_linkedin_client.py  test_profile.py  test_rate_limiter.py  test_resume_generator.py
tests/test_tools/: test_server_tools.py
(+15 files in other folders)
